--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -133,13 +133,17 @@
   </div>
 </div>
 
-<div class="w-100 d-flex justify-content-center mt-5 ">
-  <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
-    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
-    <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
-      <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
+<div class="w-100 d-flex justify-content-center mt-5 mb-5">
+  <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+    <div class="col-5">
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
     </div>
-    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
+    <div class=" col-2 d-flex justify-content-center">
+      <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+    </div>
+    <div class="col-5">
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+    </div>
   </div>
 </div>
 
@@ -244,13 +248,17 @@
 
 </div>
 
-<div class="w-100 d-flex justify-content-center mt-5 ">
-  <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
-    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
-    <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
-      <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
+<div class="w-100 d-flex justify-content-center mt-5 mb-5">
+  <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+    <div class="col-5">
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
     </div>
-    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
+    <div class=" col-2 d-flex justify-content-center">
+      <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+    </div>
+    <div class="col-5">
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+    </div>
   </div>
 </div>
 
@@ -307,13 +315,17 @@
       </div>
     </div>
   </div>
-  <div class="w-100 d-flex justify-content-center mt-5 ">
-    <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
-      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
-      <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
-        <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
+  <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+    <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
       </div>
-      <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
+      <div class=" col-2 d-flex justify-content-center">
+        <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+      </div>
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+      </div>
     </div>
   </div>
 </div>
