--- a/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
+++ b/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
@@ -1,1 +1,76 @@
-<p>cadastrar works!</p>
+<div class="imagem">
+  <div class="box">
+
+  </div>
+</div>
+
+<div class="col-12 d-flex flex-wrap justify-content-center" style="padding-top: 5rem !important;">
+  <div class="w-100 d-flex flex-wrap justify-content-center">
+    <img src="../../../../assets/imgs/Logo.png"  alt="" height="100">
+  </div>
+  <div class="pt-3">
+    <span style="color: white;" class="fs-4">ÁREA DO ALUNO</span>
+  </div>
+</div>
+
+
+<div class="col-12 d-flex flex-wrap justify-content-center" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 5rem !important;'">
+    <div class="{{isMobile?'col-12':'col-5'}} d-flex flex-wrap" style="background-color: white; border-radius: 10px;">
+      <h1 class="px-4 pt-4 fontTitulo3"><strong>INFORME SEUS DADOS</strong></h1>
+      <form [formGroup]="formularioCadastro" class="p-4 col-12">
+        <mat-form-field class="example-full-width w-100">
+          <mat-label>Nome completo</mat-label>
+          <input matInput  formControlName="Nome">
+        </mat-form-field>
+        <mat-form-field class="example-full-width w-100">
+          <mat-label>Seu e-mail</mat-label>
+          <input matInput  formControlName="Email">
+        </mat-form-field>
+        <mat-form-field class="example-full-width w-100">
+          <mat-label>Confirme o seu e-mail</mat-label>
+          <input matInput  formControlName="ConfirmaEmail">
+        </mat-form-field>
+        <mat-form-field class="example-full-width w-100">
+          <mat-label>CPF / CNPJ</mat-label>
+          <input matInput  formControlName="CpfCnpj">
+        </mat-form-field>
+        <mat-form-field class="example-full-width w-100">
+          <mat-label>Telefone</mat-label>
+          <input matInput  formControlName="Telefone">
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Senha</mat-label>
+          <input matInput type="{{visivel? 'text':'password'}}" formControlName="Senha">
+          <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
+            <span class="material-icons">
+              lock_open
+            </span>
+          </button>
+          <button *ngIf="visivel == false" matSuffix mat-icon-button (click)="visivel=true">
+            <span class="material-icons">
+              lock
+            </span>
+          </button>
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Confirmar Senha</mat-label>
+          <input matInput type="{{visivel? 'text':'password'}}" formControlName="SenhaConfirmada">
+          <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
+            <span class="material-icons">
+              lock_open
+            </span>
+          </button>
+          <button *ngIf="visivel == false" matSuffix mat-icon-button (click)="visivel=true">
+            <span class="material-icons">
+              lock
+            </span>
+          </button>
+        </mat-form-field>
+      </form>
+      <div class="col-12 d-flex flex-wrap justify-content-end px-4 mb-4">
+        <button type="button" (click)="cadastrar()" class="btn btn-warning text-light"><strong>CADASTRAR</strong></button>
+      </div>
+    </div>
+</div>
