--- a/cursoADVweb/src/app/acesso/pages/login/login.component.html
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.html
@@ -15,11 +15,13 @@
 
 <div class="col-12 d-flex flex-wrap justify-content-center" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 5rem !important;'">
   <div class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap justify-content-center" style="color: WHITE;">
-    <h1><strong class="fs-1">BEM-VINDO(A)!</strong></h1>
+    <img src="assets/imgs/ÁREA DE LOGIN PRO INF.png" style="" height="350" width="100%" />
+
+    <!-- <h1><strong class="fs-1">BEM-VINDO(A)!</strong></h1>
     <P class="fs-2" [style]="isMobile?'padding-left:2rem; padding-right: 2rem':'padding-left: 11rem;'" style="line-height:1.2; text-align: justify;">
       Está pronto para <strong> aprender conteúdos jurídicos </strong> de forma
       descomplicada e humanizada?
-    </P>
+    </P> -->
   </div>
   <div class="{{isMobile?'col-12':'col-6'}} d-flex flex-wrap justify-content-center">
     <div class="{{isMobile?'col-12':'col-8'}} d-flex flex-wrap" style="background-color: white; border-radius: 10px;">
