--- a/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
+++ b/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
@@ -1,4 +1,4 @@
-<div class="imagem">
+<div class="imagem" style="height: auto;">
   <div class="box">
 
   </div>
@@ -9,39 +9,60 @@
     <img src="../../../../assets/imgs/Logo.png"  alt="" height="100">
   </div>
   <div class="pt-3">
-    <span style="color: white;" class="fs-4">ÁREA DO ALUNO</span>
+    <span style="color: white;" class="fs-4">ÁREA DE CADASTRO DO ALUNO</span>
   </div>
 </div>
 
 
-<div class="col-12 d-flex flex-wrap justify-content-center" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 5rem !important;'">
+<div class="col-12 d-flex flex-wrap justify-content-center" [style]="isMobile?'padding-top: 2rem !important;':'padding-top: 2rem !important;'">
     <div class="{{isMobile?'col-12':'col-5'}} d-flex flex-wrap" style="background-color: white; border-radius: 10px;">
       <h1 class="px-4 pt-4 fontTitulo3"><strong>INFORME SEUS DADOS</strong></h1>
-      <form [formGroup]="formularioCadastro" class="p-4 col-12">
-        <mat-form-field class="example-full-width w-100">
+      <form [formGroup]="formularioCadastro" class="pt-4 px-4 col-12">
+        <mat-form-field class="example-full-width w-100 pt-2">
           <mat-label>Nome completo</mat-label>
-          <input matInput  formControlName="Nome">
+          <input required matInput (change)="confereCampos('Nome', 'Digite o nome')" formControlName="Nome">
         </mat-form-field>
-        <mat-form-field class="example-full-width w-100">
+        <div class="ps-3" *ngIf="!Nome" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Nome']}}</div>
+
+        <mat-form-field class="example-full-width w-100 pt-2">
           <mat-label>Seu e-mail</mat-label>
-          <input matInput  formControlName="Email">
+          <input required matInput (change)="confereCampos('Email')" formControlName="Email">
+          <!-- <mat-error *ngIf="!emailValido" >{{errorMessage['Email']}}</mat-error> -->
         </mat-form-field>
-        <mat-form-field class="example-full-width w-100">
+        <div class="ps-3" *ngIf="!Email" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Email']}}</div>
+
+
+        <mat-form-field class="example-full-width w-100 pt-2">
           <mat-label>Confirme o seu e-mail</mat-label>
-          <input matInput  formControlName="ConfirmaEmail">
+          <input matInput (change)="confereCampos('Email')" required formControlName="ConfirmaEmail">
         </mat-form-field>
-        <mat-form-field class="example-full-width w-100">
+        <div class="ps-3" *ngIf="!Email" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Email']}}</div>
+
+
+        <mat-form-field class="example-full-width w-100 pt-2">
           <mat-label>CPF / CNPJ</mat-label>
-          <input matInput  formControlName="CpfCnpj">
+          <input matInput (change)="confereCampos('CpfCnpj')" required formControlName="CpfCnpj">
         </mat-form-field>
-        <mat-form-field class="example-full-width w-100">
+        <div class="ps-3" *ngIf="!CpfCnpj" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['CpfCnpj']}}</div>
+
+
+        <mat-form-field class="example-full-width w-100 pt-2">
+          <mat-label>Cargo</mat-label>
+          <input matInput (change)="confereCampos('Cargo')" required formControlName="Cargo">
+        </mat-form-field>
+        <div class="ps-3" *ngIf="!Cargo" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Cargo']}}</div>
+
+
+        <mat-form-field class="example-full-width w-100 pt-2">
           <mat-label>Telefone</mat-label>
-          <input matInput  formControlName="Telefone">
+          <input matInput (change)="confereCampos('Telefone')" required formControlName="Telefone">
         </mat-form-field>
+        <div class="ps-3" *ngIf="!Telefone" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Telefone']}}</div>
 
-        <mat-form-field class="example-full-width">
+
+        <mat-form-field class="example-full-width pt-2">
           <mat-label>Senha</mat-label>
-          <input matInput type="{{visivel? 'text':'password'}}" formControlName="Senha">
+          <input matInput (change)="confereCampos('Senha', 'Digite a senha')" required type="{{visivel? 'text':'password'}}" formControlName="Senha">
           <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
             <span class="material-icons">
               lock_open
@@ -53,10 +74,12 @@
             </span>
           </button>
         </mat-form-field>
+        <div class="ps-3" *ngIf="!Senha" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['Senha']}}</div>
 
-        <mat-form-field class="example-full-width">
+
+        <mat-form-field class="example-full-width pt-2">
           <mat-label>Confirmar Senha</mat-label>
-          <input matInput type="{{visivel? 'text':'password'}}" formControlName="SenhaConfirmada">
+          <input matInput (change)="confereCampos('Senha', 'Senhas devem ser iguais')" required type="{{visivel? 'text':'password'}}" formControlName="ConfirmaSenha">
           <button *ngIf="visivel == true" matSuffix mat-icon-button (click)="visivel=false">
             <span class="material-icons">
               lock_open
@@ -68,9 +91,34 @@
             </span>
           </button>
         </mat-form-field>
+        <div class="ps-3" *ngIf="!Senha" style="color: red; position: relative; top:-15px; font-size: 12px;">{{errorMessage['ConfirmaSenha']}}</div>
+
       </form>
-      <div class="col-12 d-flex flex-wrap justify-content-end px-4 mb-4">
-        <button type="button" (click)="cadastrar()" class="btn btn-warning text-light"><strong>CADASTRAR</strong></button>
+      <div class="col-12 d-flex justify-content-end px-4 pb-4" *ngIf="!isMobile">
+        <input (change)="upload($event)" type="file" class="upload_btn" multiple/>
+
+        <button type="button"  class="btn btn-success rounded-pill">
+          ADICIONAR IMAGEM
+        </button>
+        <button type="button" (click)="Limpar()" class="btn btn-danger rounded-pill text-light ms-2">
+          <span class="material-icons mt-1">
+            delete
+          </span>
+        </button>
+        <div>
+
+        </div>
+      </div>
+      <div *ngIf="imagemSelecionada != null" class="col-12 pb-2  d-flex justify-content-center">
+        <img src="{{imagemSelecionada}}" style="border-radius: 100%;" alt="" width="100" height="100">
+      </div>
+      <div class="col-12 d-flex">
+        <div class="col-6 d-flex flex-wrap justify-content-start px-4 mb-4">
+          <button type="button" (click)="voltar()" class="btn btn-info text-light"><strong>VOLTAR</strong></button>
+        </div>
+        <div class="col-6 d-flex flex-wrap justify-content-end px-4 mb-4">
+          <button type="button" (click)="cadastrar()" class="btn btn-warning text-light"><strong>CADASTRAR</strong></button>
+        </div>
       </div>
     </div>
 </div>
