implementando sidebar da area do aluno

--- a/cursoADVweb/src/app/areaAluno/area-aluno/area-aluno.component.html
+++ b/cursoADVweb/src/app/areaAluno/area-aluno/area-aluno.component.html
@@ -1,2 +1,4 @@
 <app-sidebar-area-aluno></app-sidebar-area-aluno>
-<p>area-aluno works!</p>
+<div class="col-12">
+  <p>area-aluno works!</p>
+</div>
