Ajustando importações e implementando area do aluno

--- a/cursoADVweb/src/app/areaAluno/area-aluno/area-aluno.component.html
+++ b/cursoADVweb/src/app/areaAluno/area-aluno/area-aluno.component.html
@@ -1,4 +1,16 @@
 <app-sidebar-area-aluno></app-sidebar-area-aluno>
-<div class="col-12">
-  <p>area-aluno works!</p>
+<div class="col-12 pt-5 px-4">
+ <div class="col-12 d-flex flex-wrap justify-content-center">
+  <div class="col-12 d-flex justify-content-center">
+    <h1 class="">
+      <strong class="fontTitulo fs-3">
+        VOCÊ AINDA NÃO SE MATRICULOU EM UM CURSO
+      </strong>
+    </h1>
+  </div>
+  <button type="button" (click)="router.navigate(['blog/cursos'])" class="btn btn-danger text-light">
+    <strong>INSCREVER-SE EM UM CURSO</strong>
+  </button>
+
+ </div>
 </div>
