--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -134,11 +134,11 @@
 </div>
 
 <div class="w-100 d-flex justify-content-center mt-5 mb-5">
-  <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+  <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
     <div class="col-5">
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
     </div>
-    <div class=" col-2 d-flex justify-content-center">
+    <div class="{{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
       <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
     </div>
     <div class="col-5">
@@ -249,11 +249,11 @@
 </div>
 
 <div class="w-100 d-flex justify-content-center mt-5 mb-5">
-  <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+  <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
     <div class="col-5">
       <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
     </div>
-    <div class=" col-2 d-flex justify-content-center">
+    <div class="{{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
       <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
     </div>
     <div class="col-5">
@@ -316,11 +316,11 @@
     </div>
   </div>
   <div class="w-100 d-flex justify-content-center mt-5 mb-5">
-    <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+    <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
       <div class="col-5">
         <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
       </div>
-      <div class=" col-2 d-flex justify-content-center">
+      <div class=" {{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
         <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
       </div>
       <div class="col-5">
