--- a/cursoADVweb/src/app/components/sidebarAreaAluno/sidebar-area-aluno/sidebar-area-aluno.component.html
+++ b/cursoADVweb/src/app/components/sidebarAreaAluno/sidebar-area-aluno/sidebar-area-aluno.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 d-flex p-2">
+<div class="col-12 d-flex p-2" style="border-bottom: #e9e9e9 solid;">
   <div class="col-6">
     <button mat-button [matMenuTriggerFor]="belowMenu">
       <span style="color: #ed8f00;" class="material-icons fs-1">
