Implementando incrição do curso

--- a/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
@@ -25,7 +25,7 @@
         </h1>
       </div>
 
-      <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
+      <!-- <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
           <h4 class="text-center textImagem">
             <p class="text defineFont mt-2" style="width: 100%;">
@@ -61,18 +61,18 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
+      <div *ngFor="let curso of listaCursos" class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
           <h4 class="text-center textImagem">
             <p class="text defineFont mt-2" style="width: 100%;">
-              <strong class="">DPE COMPLETO</strong>
+              <strong class="">{{curso.titulo.toLocaleUpperCase()}}</strong>
             </p>
           </h4>
-          <img src="assets/imgs/site proinf quem somos e cursos/3.png" class="card-img-top" alt="...">
+          <img src="assets/imgs/recursos.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <button type="button"
+            <button type="button" (click)="redirecionar(curso)"
             class="btn btn-sm w-100 btn-danger icon-button shadow-sm rounded ">
               <strong class="defineFontBtns text-center " style="font-size: 25px;">
                 Mais informações
@@ -104,7 +104,7 @@
         </h1>
       </div>
 
-      <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
+      <!-- <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
           <h4 class="text-center textImagem">
             <p class="text defineFont mt-2" style="width: 100%;">
@@ -140,7 +140,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
@@ -185,7 +185,7 @@
         </h1>
       </div>
 
-      <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
+      <!-- <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
           <h4 class="text-center textImagem">
             <p class="text defineFont mt-2" style="width: 100%;">
@@ -221,7 +221,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="{{isMobile?'col-12 pb-3':'col-4'}} d-flex flex-wrap justify-content-center">
         <div class="card" style="width: 18rem;">
@@ -232,7 +232,7 @@
           </h4>
           <img src="assets/imgs/site proinf quem somos e cursos/6.png" class="card-img-top" alt="...">
           <div class="card-body">
-            Esse <strong>grupo de estudos </strong> está em contrução, e em breve
+            Esse <strong>aulão </strong> está em contrução, e em breve
             traremos informações...
             <!-- <button type="button"
             class="btn btn-sm w-100 btn-danger icon-button shadow-sm rounded ">
