Adicionando novas notificações e area dee pagamento sendo implementada

--- a/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
+++ b/cursoADVweb/src/app/acesso/pages/cadastrar/cadastrar.component.html
@@ -6,7 +6,7 @@
 
 <div class="col-12 d-flex flex-wrap justify-content-center" style="padding-top: 5rem !important;">
   <div class="w-100 d-flex flex-wrap justify-content-center">
-    <img src="../../../../assets/imgs/Logo.png"  alt="" height="100">
+    <img src="../../../../assets/imgs/logo.png"  alt="" height="100">
   </div>
   <div class="pt-3">
     <span style="color: white;" class="fs-4">ÁREA DE CADASTRO DO ALUNO</span>
