--- a/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
@@ -1,6 +1,6 @@
-<div class="row flex-wrap">
+<div class="col-12 flex-wrap">
   <div class="col-12 d-flex flex-wrap fundoLaranja defineFont"
-    [style]="isMobile? '':'padding-left: 7rem; height: 14.75rem;'">
+    [style]="isMobile? 'height: 18.75rem;':'padding-left: 7rem; height: 14.75rem;'">
     <div class="{{isMobile? 'col-12 px-3':'col-8'}}">
       <div class="col-12 pt-4 pb-2">
         <h1><strong class="fontTitulo2 fs-1" style="color: white;">{{curso?.titulo}}</strong></h1>
@@ -14,7 +14,7 @@
 
     <div class="{{isMobile? 'col-12':'col-4'}} d-flex justify-content-center">
       <div>
-        <button [style]="isMobile? 'm-4':'position: relative; top: 8rem;'" type="button" (click)="router.navigate(['contratacao/inicio'])"
+        <button [style]="isMobile? 'm-4':'position: relative; top: 8rem;'" type="button" (click)="redirecionar()"
         class="btn btn-danger text-light fs-3"><strong>INSCREVER-SE</strong></button>
       </div>
     </div>
@@ -34,4 +34,130 @@
       </div>
     </div>
   </div>
-</div>
+
+  <div class="col-12 d-flex flex-wrap fundoRosa defineFont {{isMobile? 'p-4':'p-5'}}">
+    <div class="col-12 mb-3" [style]="isMobile? '':'padding-left: 7rem; padding-right: 7rem;'">
+      <div class="col-12 pt-4 pb-2">
+        <h1><strong class="fontTitulo2 fs-1">Estrutura do Curso</strong></h1>
+      </div>
+      <div class="col-12" *ngIf="true">
+        <P class="fs-5 formataParagrafos" >
+          {{curso?.estrutura}}
+        </P>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 mt-3 d-flex flex-wrap" [style]="isMobile? '':'padding-left: 7rem; padding-right: 7rem;'">
+    <div class=" {{isMobile? 'col-12 px-3':'col-4'}}" *ngFor="let topco of curso?.topcos">
+      <div class="card mt-3 fundoRosa " [style]="isMobile? 'width: 100%; border-radius: 30px;': 'width: 90%; border-radius: 30px;'">
+        <div class="card-body">
+          <h5 class="card-title fs-6 text-center mt-1" style="color: #842723;"><strong>{{topco}}</strong></h5>
+        </div>
+      </div>
+
+    </div>
+    <div class="col mt-2 p-3 fs-5 formataParagrafos">
+      {{curso?.materialApoio}}
+    </div>
+  </div>
+
+  <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+    <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+      </div>
+      <div class="{{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
+        <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+      </div>
+      <div class="col-5">
+        <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="w-100 d-flex flex-wrap fundoRosa pt-5 justify-content-center">
+    <div class="imagemDeFundo" [style]="isMobile? 'width: 1px;':''"  >
+
+    </div>
+    <div style="position: absolute;" class="w-100">
+      <div class="w-100 d-flex justify-content-center text-center">
+        <h1>
+          <strong class="fs-2 fontTitulo2">
+            Veja o que nossos alunos têm a dizer  sobre o curso:
+          </strong>
+        </h1>
+      </div>
+      <div class="w-100" style="margin-top: 6rem !important">
+        <div class="containerSlide justify-content-center d-flex">
+          <div (click)="direita()" class="setaDireita">
+            <span class="material-icons">
+            arrow_forward_ios
+            </span>
+          </div>
+          <div (click)="esquerda()" class="setaEsquerda" [style]="isMobile? 'left: 36px !important;':''"  >
+            <span class="material-icons">
+              arrow_back_ios
+              </span>
+          </div>
+
+          @for(avaliacoes of ListaAvaliacoes; track avaliacoes; let i = $index){
+            <div ng id="{{i}}" class="card {{avaliacoes.css}} m-1  mx-3 {{isMobile? avaliacoes.css == 'pequeno'? 'cardMobilePequeno':'cardMobile':'cardTelacheia'}}" >
+              <div class="w-100 justify-content-center d-flex flex-wrap" style="position: relative; top: -74px;">
+                <div class="circle">
+                  <img src="{{avaliacoes.src}}">
+                </div>
+                <span class="material-icons {{isMobile?'aspasMobile':'aspas'}} ">
+                  format_quote
+                </span>
+                <div class="w-100 text-center">
+                  <h3 class="card-title"> <strong class="defineFont">{{avaliacoes.nome}}</strong></h3>
+                </div>
+              </div>
+              <div class="card-body d-flex flex-wrap justify-content-center" style="top: -3rem; position: relative;">
+                <p class="card-text text-center">{{avaliacoes.conteudo}}</p>
+                <div *ngFor="let estrelas of avaliacoes.estrelas" class="pt-3">
+                  <span class="material-icons" style="color: #EE5b54;">
+                    star
+                    </span>
+                </div>
+              </div>
+            </div>
+          }
+
+
+        </div>
+      </div>
+    </div>
+    <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+      <div class="col-12 d-flex justify-content-center" style="top: 71px; position: relative;" >
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+        <div class=" {{isMobile? 'col-2':'col-1'}} d-flex justify-content-center">
+          <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+        </div>
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <iframe class="editaVideo" width="560" height="315" src="https://www.youtube.com/embed/0wIC1_wG7_o?si=MiOG0bLPop5ijHr-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; " referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+  <!-- <div>
+    <button
+      id="customBtn"
+      class="customGPlusSignIn mb-2"
+      (click)="getAccessToken()"
+    >
+      <span class="icon"></span>
+      <span class="buttonText">Logar com o Google</span>
+    </button>
+  </div>
+  <video controls>
+    <source type="video/mp4" src="https://www.googleapis.com/drive/v3/files/16aLd5ZgzmkJlrf1t-_Q0AV2VMV6AtGtt?key=AIzaSyCDwr63fEbRWk7Fjow51IRgeYWepdll1Gk">
+    </video>
+ </div> -->
+<!--  https://www.googleapis.com/drive/v3/files/16aLd5ZgzmkJlrf1t-_Q0AV2VMV6AtGtt?key=[YOUR_API_KEY]
+https://drive.google.com/file/d/16aLd5ZgzmkJlrf1t-_Q0AV2VMV6AtGtt/view?usp=sharing -->
